# Copyright 2025 Steven Le Rouzic
#
# SPDX-License-Identifier: BSD-3-Clause

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_applicable_licenses = ["//:license"],
)

cc_library(
    name = "buffer",
    hdrs = [
        "buffer.hpp",
    ],
    strip_include_prefix = "/src",
    deps = [
        "//src/asl/allocator",
        "//src/asl/base",
        "//src/asl/types:span",
        "//src/asl/hashing",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "chunked_buffer",
    hdrs = [
        "chunked_buffer.hpp",
    ],
    strip_include_prefix = "/src",
    deps = [
        "//src/asl/allocator",
        "//src/asl/base",
        "//src/asl/containers:buffer",
        "//src/asl/types:array",
        "//src/asl/types:maybe_uninit",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "hash_set",
    hdrs = [
        "hash_set.hpp",
    ],
    strip_include_prefix = "/src",
    deps = [
        "//src/asl/base",
        "//src/asl/allocator",
        "//src/asl/types:maybe_uninit",
        "//src/asl/hashing",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "hash_map",
    hdrs = [
        "hash_map.hpp",
    ],
    strip_include_prefix = "/src",
    deps = [
        "//src/asl/base",
        "//src/asl/allocator",
        "//src/asl/hashing",
        ":hash_set",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "intrusive_list",
    hdrs = [
        "intrusive_list.hpp",
    ],
    strip_include_prefix = "/src",
    deps = [
        "//src/asl/base",
    ],
    visibility = ["//visibility:public"],
)

[cc_test(
    name = "%s_tests" % name,
    srcs = [
        "%s_tests.cpp" % name,
    ],
    deps = [
        ":%s" % name,
        "//src/asl/tests:utils",
        "//src/asl/testing",
        "//src/asl/strings:string",
    ],
) for name in [
    "buffer",
    "chunked_buffer",
    "hash_map",
    "hash_set",
    "intrusive_list",
]]
