# Copyright 2025 Steven Le Rouzic
#
# SPDX-License-Identifier: BSD-3-Clause

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_applicable_licenses = ["//:license"],
)

cc_library(
    name = "formatting",
    hdrs = [
        "format.hpp",
    ],
    strip_include_prefix = "/src",
    srcs = [
        "format.cpp",
        "format_float.cpp",
    ],
    deps = [
        "//src/asl/base",
        "//src/asl/strings:string_view",
        "//src/asl/types:span",
        "//src/asl/io:writer",
        "//vendor/dragonbox",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "tests",
    srcs = [
        "format_tests.cpp",
    ],
    deps = [
        ":formatting",
        "//src/asl/tests:utils",
        "//src/asl/testing",
        "//src/asl/strings:string_builder",
    ],
)
