# Copyright 2025 Steven Le Rouzic
#
# SPDX-License-Identifier: BSD-3-Clause

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_applicable_licenses = ["//:license"],
)

cc_library(
    name = "index_pool",
    hdrs = [
        "index_pool.hpp",
    ],
    strip_include_prefix = "/src",
    deps = [
        "//src/asl/allocator",
        "//src/asl/base",
        "//src/asl/containers:chunked_buffer",
        "//src/asl/types:option",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "dense_handle_pool",
    hdrs = [
        "dense_handle_pool.hpp",
    ],
    strip_include_prefix = "/src",
    deps = [
        ":index_pool",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "sparse_handle_pool",
    hdrs = [
        "sparse_handle_pool.hpp",
    ],
    strip_include_prefix = "/src",
    deps = [
        ":index_pool",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "index_pool_tests",
    srcs = [
        "index_pool_tests.cpp",
    ],
    deps = [
        ":index_pool",
        "//src/asl/hashing",
        "//src/asl/tests:utils",
        "//src/asl/testing",
    ],
)

cc_test(
    name = "dense_handle_pool_tests",
    srcs = [
        "dense_handle_pool_tests.cpp",
    ],
    deps = [
        ":dense_handle_pool",
        "//src/asl/tests:utils",
        "//src/asl/testing",
    ],
)

cc_test(
    name = "sparse_handle_pool_tests",
    srcs = [
        "sparse_handle_pool_tests.cpp",
    ],
    deps = [
        ":sparse_handle_pool",
        "//src/asl/tests:utils",
        "//src/asl/testing",
    ],
)
