# Copyright 2025 Steven Le Rouzic
#
# SPDX-License-Identifier: BSD-3-Clause

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_applicable_licenses = ["//:license"],
)

cc_library(
    name = "hashing",
    hdrs = [
        "hash.hpp",
    ],
    strip_include_prefix = "/src",
    srcs = [
        "hash_cityhash.cpp",
    ],
    deps = [
        "//src/asl/base",
        "//src/asl/types:span",
    ],
    applicable_licenses = [
        "//vendor/cityhash:license",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "tests",
    srcs = [
        "hash_tests.cpp",
    ],
    deps = [
        "//src/asl/base",
        "//src/asl/tests:utils",
        "//src/asl/testing",
        ":hashing",
        "//src/asl/strings:string_view",
        "//src/asl/strings:string",
        "//src/asl/containers:buffer",
        "//src/asl/types:box",
        "//src/asl/types:option",
        "//src/asl/types:status",
    ],
)
