# Copyright 2025 Steven Le Rouzic
#
# SPDX-License-Identifier: BSD-3-Clause

load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_applicable_licenses = ["//:license"],
)

cc_library(
    name = "writer",
    hdrs = [
        "writer.hpp",
    ],
    strip_include_prefix = "/src",
    deps = [
        "//src/asl/base",
        "//src/asl/types:span",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "print",
    hdrs = [
        "print.hpp",
    ],
    strip_include_prefix = "/src",
    srcs = [
        "print.cpp",
    ],
    deps = [
        "//src/asl/formatting",
        ":writer",
    ],
    visibility = ["//visibility:public"],
)
